# tokenGift

./: .gitignore  Agent_Token_Bank_商业计划书(1).docx  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy-gh-pages.yml
assets/: index-D9bQRYGf.js  index-DwtLM64o.js  index-z0GA03-g.css
docs/: node-issuer.md  yizhan-api-adapter.md
scripts/: publish_pypi_uv.sh  release_py.sh  test_tokengift_env.sh  tokengift.js
src/: App.tsx  main.tsx  styles.css  types.ts
src/lib/: configParser.ts
tokengift_cli/: __init__.py  cli.py
web/: index.html  tsconfig.json  vite.config.ts
web/src/: App.tsx  types.ts
web/src/lib/: configParser.ts  tokengiftCrypto.ts
